[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Reusable_Scenes/popup_newValue.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Reusable_Scenes/popup_deleteKey.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Database_Manager/Theme and Style/main_25.tres" type="Theme" id=4]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Input_Text.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Description_Container.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Tab_Template.gd" type="Script" id=10]

[node name="Tab_Manager" type="Control" groups=["Tab"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="VBox1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
margin_right = 1024.0
margin_bottom = 25.0

[node name="Center1" type="CenterContainer" parent="VBox1/HBox1"]
margin_right = 663.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Center1"]
margin_left = 167.0
margin_right = 496.0
margin_bottom = 25.0
text = "CHANGES HAVE BEEN MADE BUT NOT SAVED"

[node name="SaveChanges" type="Button" parent="VBox1/HBox1"]
margin_left = 667.0
margin_right = 780.0
margin_bottom = 25.0
text = "Save Changes"

[node name="Label" type="Label" parent="VBox1/HBox1"]
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="SaveNewItem" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 664.0
margin_right = 780.0
margin_bottom = 25.0
text = "Save New Item"

[node name="Label2" type="Label" parent="VBox1/HBox1"]
visible = false
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="AddNewItem" type="Button" parent="VBox1/HBox1"]
margin_left = 803.0
margin_right = 912.0
margin_bottom = 25.0
text = "Add New Item"

[node name="Label3" type="Label" parent="VBox1/HBox1"]
margin_left = 916.0
margin_right = 931.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="DeleteSelectedItem" type="Button" parent="VBox1/HBox1"]
margin_left = 935.0
margin_right = 1024.0
margin_bottom = 25.0
text = "Delete Item"

[node name="Cancel" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 970.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Cancel"

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2"]
margin_right = 175.0
margin_bottom = 542.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table_Buttons" type="VBoxContainer" parent="VBox1/HBox2/Scroll1"]
margin_right = 175.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel1" type="PanelContainer" parent="VBox1/HBox2"]
margin_left = 170.0
margin_right = 1024.0
margin_bottom = 542.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 847.0
margin_bottom = 535.0
color = Color( 0, 0, 0, 0.0823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 847.0
margin_bottom = 535.0

[node name="HBox1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_right = 840.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
margin_right = 413.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1"]
margin_right = 413.0
margin_bottom = 93.0
size_flags_horizontal = 3

[node name="Key" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 413.0
margin_bottom = 93.0
label_text = "Key"

[node name="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="0"]
margin_right = 413.0
text = "Key"

[node name="Input" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="1"]
margin_right = 413.0

[node name="input_templateBuffer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="2"]
margin_right = 413.0
margin_bottom = 93.0

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 417.0
margin_right = 422.0
margin_bottom = 240.0
rect_min_size = Vector2( 5, 0 )

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
margin_left = 426.0
margin_right = 840.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="VBox2" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll2"]
margin_right = 414.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 244.0
margin_right = 840.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 10 )

[node name="HBox2" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_top = 258.0
margin_right = 840.0
margin_bottom = 283.0

[node name="Label2" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )

[node name="CenterContainer" type="CenterContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 204.0
margin_right = 615.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2/CenterContainer"]
margin_left = 150.0
margin_right = 260.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Custom Fields"
align = 1
valign = 1

[node name="AddField" type="Button" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 619.0
margin_right = 728.0
margin_bottom = 25.0
text = "Add New Field"

[node name="Label" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 732.0
margin_right = 747.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="DeleteField" type="Button" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 751.0
margin_right = 840.0
margin_bottom = 25.0
text = "Delete Field"

[node name="Scroll1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_top = 287.0
margin_right = 840.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
margin_right = 413.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="VBox1" parent="VBox1/HBox2/Panel1/VBox1/Scroll1/Scroll1" instance=ExtResource( 7 )]
margin_top = 0.0
margin_right = 413.0
margin_bottom = 0.0
size_flags_vertical = 1

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 417.0
margin_right = 422.0
margin_bottom = 241.0
rect_min_size = Vector2( 5, 0 )

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
margin_left = 426.0
margin_right = 840.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="VBox2" parent="VBox1/HBox2/Panel1/VBox1/Scroll1/Scroll2" instance=ExtResource( 7 )]
margin_top = 0.0
margin_right = 414.0
margin_bottom = 241.0

[node name="Hbox3" type="HBoxContainer" parent="VBox1"]
margin_top = 575.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBox1/Hbox3"]
margin_left = 277.0
margin_right = 747.0
margin_bottom = 25.0
text = "Awesome Unicorn 3 Database Creator Version Pre-Alpha 0.1"
align = 1
valign = 1

[node name="Popups" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 250 )
color = Color( 1, 1, 1, 0.411765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_delete_confirm" type="Popup" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -50.0
margin_right = 116.5
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
margin_right = 271.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 233.0
margin_bottom = 100.0

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 233.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="FileDialog" type="FileDialog" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -187.5
margin_right = 338.0
margin_bottom = 187.5
rect_min_size = Vector2( 255, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Select Icon file"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons"
current_file = "Chode.png"
current_path = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons/Chode.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog_sprite" type="FileDialog" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -187.5
margin_right = 338.0
margin_bottom = 187.5
rect_min_size = Vector2( 255, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Select Icon file"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons"
current_file = "Chode.png"
current_path = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons/Chode.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_newValue" parent="Popups" instance=ExtResource( 1 )]

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="1"]
items = [ "Item 0", null, false, 0, null ]

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
items = [ "Item 0", null, false, 0, null ]

[node name="popup_deleteKey" parent="Popups" instance=ExtResource( 3 )]

[node name="Itemlist" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="1"]
items = [ "Nestor", null, false, "Hilda", null, false ]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="VBox1/HBox1/SaveChanges" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveNewItem" to="." method="_on_SaveNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/AddNewItem" to="." method="_on_AddNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/DeleteSelectedItem" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Panel1/VBox1/HBox2/AddField" to="." method="_on_AddField_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Panel1/VBox1/HBox2/DeleteField" to="." method="display_options"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_deletePopup_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on__deletePopup_Cancel_button_up"]
[connection signal="file_selected" from="Popups/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="hide" from="Popups/FileDialog" to="." method="_on_FileDialog_hide"]
[connection signal="file_selected" from="Popups/FileDialog_sprite" to="." method="_on_FileDialog_sprite_file_selected"]
[connection signal="hide" from="Popups/FileDialog_sprite" to="." method="_on_FileDialog_sprite_hide"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Accept" to="." method="_on_NewField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_NewField_Cancel_button_up"]
[connection signal="item_selected" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" to="." method="_on_Itemlist_item_selected"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_DeleteField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_DeleteField_Cancel_button_up"]

[editable path="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key"]
[editable path="Popups/popup_newValue"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="Popups/popup_deleteKey"]
